<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple note</string>
    <string name="app_widget_1_1">Simple note 1x1</string>
    <string name="app_widget_1_2">Simple note 1x2</string>
    <string name="app_widget_1_3">Simple note 1x3</string>
    <string name="app_widget_1_4">Simple note 1x4</string>
    <string name="app_widget_2_1">Simple note 2x1</string>
    <string name="app_widget_2_2">Simple note 2x2</string>
    <string name="app_widget_2_3">Simple note 2x3</string>
    <string name="app_widget_2_4">Simple note 2x4</string>
    <string name="app_widget_3_1">Simple note 3x1</string>
    <string name="app_widget_3_2">Simple note 3x2</string>
    <string name="app_widget_3_3">Simple note 3x3</string>
    <string name="app_widget_3_4">Simple note 3x4</string>
    <string name="app_widget_4_1">Simple note 4x1</string>
    <string name="app_widget_4_2">Simple note 4x2</string>
    <string name="app_widget_4_3">Simple note 4x3</string>
    <string name="app_widget_4_4">Simple note 4x4</string>

    <string name="widget_layout_title">None</string>
    <string name="widget_layout_select_list_help">Click on widget, list name or list icon to manage lists.</string>
    <string name="widget_layout_add_item_help">Click on add button to add list items.</string>
    <string name="widget_layout_button_add">Add</string>
    <string name="widget_layout_button_next">Next</string>
    <string name="widget_layout_button_prev">Prev</string>
    <string name="widget_layout_row_button_edit">Edit</string>

    <string name="activity_lists_title">Manage lists</string>
    <string name="activity_lists_button_add">Add</string>
    <string name="activity_lists_row_button_edit">Edit</string>
    <string name="activity_lists_row_button_remove">Delete</string>
    <string name="activity_lists_row_edit_button_cancel">Cancel</string>
    <string name="activity_lists_row_edit_button_commit">Ok</string>

    <string name="activity_item_title">Add / Edit list item</string>
    <string name="activity_item_button_commit">Ok</string>
    <string name="activity_item_button_cancel">Cancel</string>
    <string name="activity_item_button_next">Next</string>
    <string name="activity_item_button_delete">Delete</string>

    <string name="drawable_link_image_logo">http://www.iconfinder.com/icondetails/46774/32/add_notes_icon?r=1</string>
    <string name="drawable_link_image_add_list">http://www.iconfinder.com/icondetails/32378/32/</string>
    <string name="drawable_link_image_add_item">http://www.iconfinder.com/icondetails/46776/32/add_icon?r=1</string>
    <string name="drawable_link_image_delete_list">http://www.iconfinder.com/icondetails/34217/32/</string>
    <string name="drawable_link_image_delete_item">http://www.iconfinder.com/icondetails/34217/32/</string>
    <string name="drawable_link_image_commit_list">http://www.iconfinder.com/icondetails/58494/32/button_check_white_icon</string>
    <string name="drawable_link_image_commit_item">http://www.iconfinder.com/icondetails/58494/32/button_check_white_icon</string>
    <string name="drawable_link_image_edit_list">http://www.iconfinder.com/icondetails/43769/32/document_edit_icon</string>
    <string name="drawable_link_image_edit_item">http://www.iconfinder.com/icondetails/43769/32/document_edit_icon</string>
    <string name="drawable_link_image_cancel_list">http://www.iconfinder.com/icondetails/34208/32/</string>
    <string name="drawable_link_image_cancel_item">http://www.iconfinder.com/icondetails/34208/32/</string>
</resources>
