<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/widget_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:focusable="true"
                android:background="@drawable/widget_background">
    <ImageView
            android:id="@+id/widget_layout_logo"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_marginLeft="5dip"
            android:src="@drawable/logo"/>
    <TextView
            android:id="@+id/widget_layout_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/widget_layout_logo"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:text="@string/widget_layout_title"
            style="@style/header_text"/>
    <TextView
            android:id="@+id/widget_layout_select_list_help"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/widget_layout_logo"
            android:layout_marginTop="5dip"
            android:text="@string/widget_layout_select_list_help"
            style="@style/regular_text"/>
    <TextView
            android:id="@+id/widget_layout_add_item_help"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/widget_layout_logo"
            android:layout_marginTop="5dip"
            android:text="@string/widget_layout_add_item_help"
            style="@style/regular_text"/>
    <LinearLayout
            android:id="@+id/widget_layout_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/widget_layout_title"
            android:layout_marginTop="25dip"
            android:orientation="vertical"/>
    <Button
            android:id="@+id/widget_layout_button_add"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/widget_layout_button_add"
            style="@style/menu_button"
            android:visibility="gone"/>
    <Button
            android:id="@+id/widget_layout_button_next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/widget_layout_button_next"
            style="@style/menu_button"
            android:visibility="gone"/>
    <Button
            android:id="@+id/widget_layout_button_prev"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/widget_layout_button_prev"
            style="@style/menu_button"
            android:visibility="gone"/>
</RelativeLayout>