<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_item_text"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_item_text"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            >
        <Button
                android:text="@string/activity_item_button_cancel"
                android:id="@+id/activity_item_button_cancel"
                android:onClick="onCancel"
                style="@style/menu_button"
                />
        <Button
                android:layout_marginLeft="5dip"
                android:text="@string/activity_item_button_commit"
                android:id="@+id/activity_item_button_commit"
                android:onClick="onCommit"
                style="@style/menu_button"
                />
    </LinearLayout>
    <Button
            android:layout_alignParentLeft="true"
            android:layout_below="@id/activity_item_text"
            android:layout_marginTop="10dip"
            android:layout_alignTop="@id/activity_item_button_commit"
            android:text="@string/activity_item_button_delete"
            android:id="@+id/activity_item_button_delete"
            android:onClick="onDelete"
            style="@style/menu_button"
            />
</RelativeLayout>